Add Google calendar list support; add 'confirmedAt' attribute to user model; lowercase event slug
